--- a/onepager_HTML.html
+++ b/onepager_HTML.html
@@ -45,7 +45,7 @@
                </ol>
         </div>
         <div class="clear"></div>
-        <div class="news">
+        <div class="footer">
           <p>Over mij: Mijn naam is Micha van der Willigen. Ik studeer aan de hogeschool van Rotterdam. Het slimme desinfecteer alarm is een onderdeel van een schoolproject.</p>
         </div>
 
